[gui-components] refactor - compile warnings